--- a/src/ui-components/Button/Button.module.scss
+++ b/src/ui-components/Button/Button.module.scss
@@ -3,8 +3,7 @@
 
 .button {
   font-family: $secondFontFamily;
-  font-size: $buttonText;
-  font-weight: $buttonBold;
+  @include buttonText;
   text-transform: uppercase;
   border: none;
   padding: 0;
