--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -79,6 +79,9 @@ $accentRed: #9b4b4b;
 $accentGold: #ab8956;
 $accentError: #ae2917;
 
+// Blur color
+$blurColor: #030303;
+
 // BreakPoints
 $breakpointMax: 1440px;
 $breakpointDesktop: 1280px;
@@ -95,3 +98,16 @@ $defaultButtonLightShadow: 0px 4px 10px 0px #00000040;
 $defaultButtonLightFocus: #232323;
 $defaultButtonDarkShadow: 0px 4px 10px 0px #ab895640;
 $defaultButtonDarkFocus: #ba9052;
+
+// Z-INDEX
+$firstLayer: 1;
+$secondLayer: 2;
+$thirdLayer: 3;
+
+// Transition time
+$headerMenuDelay: 0.5s;
+
+// Transition components
+// Card
+$cardTransition: all ease-in 0.3s;
+$cardImgTransition: all 0.5s ease-out;
