--- a/src/ui-components/Card/Card.module.scss
+++ b/src/ui-components/Card/Card.module.scss
@@ -10,7 +10,7 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  transition: all ease-in 0.3s;
+  transition: $cardTransition;
 
   @include mediaDesktop {
     max-width: 392px;
@@ -35,7 +35,7 @@
   }
 
   &__img {
-    transition: all 0.5s ease-out;
+    transition: $cardImgTransition;
     @include noUserSelect;
     @include mediaDesktop {
       &:hover {
