Upadate Card component

--- a/src/components/ui-components/Card/Card.module.scss
+++ b/src/components/ui-components/Card/Card.module.scss
@@ -2,6 +2,7 @@
 // @import '@styles/_mixins.scss';
 
 .card {
+  display: block;
   margin: 0;
   padding: 0;
   border: 0;
@@ -139,6 +140,7 @@
     max-width: 24px;
     width: 100%;
     @include flexCenter;
+    color: $primaryLightGrey;
 
     &_light {
       background-color: $accentRed;
