--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -4,6 +4,7 @@
   align-items: center;
   font-family: $SecondFontFamily;
   box-sizing: border-box;
+  border-top: 1px solid $secondaryGrey;
 
   &_light {
     background-color: $primaryWhite;
