--- a/src/pages/ArtistPage/ArtistPage.module.scss
+++ b/src/pages/ArtistPage/ArtistPage.module.scss
@@ -11,6 +11,14 @@
     background-color: $primaryBlack;
   }
 
+  &__container {
+    padding-bottom: 80px;
+
+    @include breakPointTab {
+      padding-bottom: 100px;
+    }
+  }
+
   &__heading {
     margin: 0;
     font-size: 32px;
@@ -41,12 +49,13 @@
 // Видел в макете то, что в этом блоке будут
 // еще кнопки с логикой, вынесу в отдельный компонент
 .link {
+  box-sizing: border-box;
   width: 100%;
   display: flex;
   justify-content: flex-start;
   margin: 0 auto;
   max-width: 1280px;
-  padding-left: 20px;
+  padding: 0 20px;
   margin-top: 52px;
   margin-bottom: 24px;
 
