fix ArtistPage Link

--- a/src/pages/ArtistPage/ArtistPage.module.scss
+++ b/src/pages/ArtistPage/ArtistPage.module.scss
@@ -63,4 +63,10 @@
     margin-right: 12px;
     transform: rotate(180deg);
   }
+
+  &__content::after {
+    @include breakPointTab {
+      content: 'BACK';
+    }
+  }
 }
