--- a/src/components/ui-components/Loader/Loader.module.scss
+++ b/src/components/ui-components/Loader/Loader.module.scss
@@ -1,35 +1,103 @@
 .loader {
-  margin: auto;
-  border-radius: 50%;
-  animation: loading 1s linear infinite;
+  @include flexCenter;
+  box-sizing: border-box;
+
+  &_light {
+    color: $primaryBlack;
+  }
+
+  &_dark {
+    color: $primaryLightGrey;
+  }
+
+  &__wrapper {
+    width: 55px;
+    height: 55px;
+    animation: wrapper 1s linear infinite;
+  }
+
+  &__circle {
+    stroke-width: 5;
+    stroke-linecap: round;
+    stroke-dasharray: 1, 210;
+    stroke: currentColor;
+    fill: none;
+    transform: rotate(100deg);
+    transform-origin: center;
+    animation: wrapper 2s linear infinite;
+
+    &_1 {
+      animation: circle_1 2s ease-in-out infinite;
+      opacity: 0.8;
+    }
+
+    &_2 {
+      animation: circle_2 2s ease-in-out infinite;
+      opacity: 0.35;
+    }
+
+    &_3 {
+      animation: circle_3 2s ease-in-out infinite;
+      opacity: 0.35;
+    }
+
+    &_4 {
+      animation: circle_4 2s ease-in-out infinite;
+      opacity: 0.35;
+    }
+  }
 }
 
-@keyframes loading {
-  0% {
-    transform: rotate(0deg);
-  }
+@keyframes wrapper {
   100% {
     transform: rotate(360deg);
   }
 }
 
-.l {
-  width: 60px;
-  height: 60px;
-  border: 6px solid $primaryBlack;
-  border-right-color: transparent;
+@keyframes circle_1 {
+  0%,
+  100% {
+    stroke-dasharray: 1, 150;
+    transform: rotate(85deg);
+  }
+  50% {
+    stroke-dasharray: 30, 150;
+    transform: rotate(1deg);
+  }
 }
 
-.m {
-  width: 40px;
-  height: 40px;
-  border: 4.5px solid $primaryBlack;
-  border-right-color: transparent;
+@keyframes circle_2 {
+  0%,
+  100% {
+    stroke-dasharray: 1, 150;
+    transform: rotate(85deg);
+  }
+  50% {
+    stroke-dasharray: 45, 150;
+    transform: rotate(-41deg);
+  }
 }
 
-.s {
-  border: 3px solid $primaryBlack;
-  border-right-color: transparent;
-  width: 20px;
-  height: 20px;
+@keyframes circle_3 {
+  0%,
+  100% {
+    stroke-dasharray: 1, 150;
+    transform: rotate(85deg);
+  }
+  50% {
+    stroke-dasharray: 60, 150;
+    transform: rotate(-83deg);
+  }
+}
+
+@keyframes circle_4 {
+  0%,
+  100% {
+    stroke-dasharray: 1, 150;
+    transform: rotate(85deg);
+  }
+  50% {
+    stroke-dasharray: 75, 210;
+    transform: rotate(-125deg);
+  }
 }
