create Skeleton component

--- a/src/components/ui-components/Skeleton/Skeleton.module.scss
+++ b/src/components/ui-components/Skeleton/Skeleton.module.scss
@@ -4,11 +4,47 @@
   position: relative;
   width: 100%;
   height: 100%;
-  // animation: load 1s ease-out infinite;
+  overflow: hidden;
+  aspect-ratio: 4/3;
 
   @include breakPointPC {
     max-width: 392px;
     max-height: 260px;
+  }
+
+  &::before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: -150px;
+    top: 0;
+    height: 100%;
+    width: 80px;
+    animation: loading 2s ease-out infinite;
+  }
+
+  &_light {
+    background-color: #eeeded;
+    &::before {
+      background: linear-gradient(
+        to right,
+        transparent 0%,
+        $primaryWhite 50%,
+        transparent 100%
+      );
+    }
+  }
+
+  &_dark {
+    background-color: #0d0d0d;
+    &::before {
+      background: linear-gradient(
+        to right,
+        transparent 0%,
+        #181818 50%,
+        transparent 100%
+      );
+    }
   }
 
   &__wrapper {
@@ -29,22 +65,17 @@
   }
 
   &__img {
+    overflow: hidden;
     width: 100%;
     height: 100%;
-    object-fit: cover;
-    // min-width: 280px;
-    // min-height: 185px;
-    background-color: #eeeded;
   }
 }
 
 .info {
-  text-transform: uppercase;
   box-sizing: border-box;
   width: 100%;
   padding: 8px 0 8px 0px;
   max-width: 236px;
-  background-color: $primaryWhite;
 
   @include breakPointTab {
     padding: 12px 0 12px 0px;
@@ -54,17 +85,19 @@
     padding: 20px 0 20px 0px;
   }
 
-  // &_light {
-  //   background-color: $primaryWhite;
-  //   color: $primaryBlack;
-  // }
+  &_light {
+    background-color: $primaryWhite;
+  }
+
+  &_dark {
+    background-color: $primaryBlack;
+  }
 
   &__textBlock {
     width: 100%;
     height: 29px;
     border: none;
     padding-left: 12px;
-    letter-spacing: 0.01px;
 
     @include breakPointTab {
       height: 42px;
@@ -72,20 +105,7 @@
 
     @include breakPointPC {
       padding-left: 18px;
-
-      // &_light {
-      //   border-left: 2px solid $accentRed;
-      // }
-
-      // &_dark {
-      //   border-left: 2px solid $accentGold;
-      // }
     }
-  }
-
-  &_dark {
-    background-color: $primaryBlack;
-    color: $primaryWhite;
   }
 
   &__title {
@@ -99,54 +119,40 @@
       max-width: 214px;
       height: 19px;
     }
-  }
-
-  &__subtitle {
-    margin-block-start: 4px;
-    background-color: #ac6d6d;
-    width: 47px;
-    height: 10px;
 
     &_light {
-      color: $accentRed;
       background-color: #eeeded;
     }
 
     &_dark {
-      color: $accentGold;
+      background-color: #0d0d0d;
+    }
+  }
+
+  &__subtitle {
+    margin-block-start: 4px;
+    width: 47px;
+    height: 10px;
+
+    &_light {
+      background-color: #eeeded;
+    }
+
+    &_dark {
+      background-color: #0d0d0d;
     }
 
     @include breakPointTab {
       margin-block-start: 8px;
-      font-size: $subtitleTextSize;
       width: 70px;
       height: 15px;
     }
   }
-
-  &__arrow {
-    max-width: 24px;
-    width: 100%;
-    @include flexCenter;
-    color: $primaryLightGrey;
-
-    &_light {
-      background-color: $accentRed;
-    }
-
-    &_dark {
-      background-color: $accentGold;
-    }
-
-    @include breakPointPC {
-      display: none;
-    }
-  }
 }
 
-@keyframes load {
+@keyframes loading {
   from {
-    left: -150px;
+    left: -500px;
   }
   to {
     left: 100%;
@@ -155,5 +161,7 @@
 
 .img {
   width: 500px;
-  height: 350px;
+  height: 400px;
+  overflow: hidden;
+  background-color: inherit;
 }
