--- a/src/components/Accordion/Accordion.module.scss
+++ b/src/components/Accordion/Accordion.module.scss
@@ -1,5 +1,5 @@
 .accordion {
-  font-family: $SecondFontFamily;
+  font-family: $secondFontFamily;
   font-weight: 300;
   font-size: 16px;
   text-align: justify;
@@ -15,22 +15,22 @@
     padding-top: 20px;
     line-height: 22px;
 
-    @include breakPointTab {
+    @include mediaTablet {
       padding-top: 40px;
     }
-    @include breakPointPC {
+    @include mediaDesktop {
       padding-top: 20px;
     }
 
     &_active {
       &_dark {
-        background: linear-gradient(180deg, #dedede 0%, #dedede40);
+        background: $accordionGradientDark;
         background-clip: text;
         -webkit-text-fill-color: transparent;
       }
 
       &_light {
-        background: linear-gradient(180deg, #575757 0%, #57575740);
+        background: $accordionGradientLight;
         background-clip: text;
         -webkit-text-fill-color: transparent;
       }
@@ -49,7 +49,7 @@
     }
 
     &__arrow {
-      transition: all 0.5s;
+      transition: all $defaultDelay;
       transform: rotate(180deg);
     }
   }
