--- a/src/components/ArtistInfo/ArtistInfo.module.scss
+++ b/src/components/ArtistInfo/ArtistInfo.module.scss
@@ -3,16 +3,18 @@
     display: block;
     position: static;
 
-    @include breakPointPC {
+    @include mediaDesktop {
       position: relative;
       margin-left: 80px;
+      // Проверь
       margin: 0 auto;
       width: 100%;
       max-width: 1280px;
       height: 1000px;
       padding-left: 20px;
     }
-    @include breakPointMax {
+
+    @include mediaMax {
       max-width: 1440px;
     }
   }
@@ -23,11 +25,11 @@
     &_image {
       max-height: 452px;
 
-      @include breakPointTab {
+      @include mediaTablet {
         max-height: 1000px;
       }
 
-      @include breakPointPC {
+      @include mediaDesktop {
         position: absolute;
         height: 1000px;
         width: 1000px;
@@ -42,18 +44,18 @@
       padding-bottom: 20px;
       width: 300px;
 
-      @include breakPointTab {
+      @include mediaTablet {
         width: 560px;
       }
 
-      @include breakPointPC {
+      @include mediaDesktop {
         position: relative;
         top: 60px;
         width: 604px;
         margin-bottom: 60px;
       }
 
-      @include breakPointMax {
+      @include mediaMax {
         left: 80px;
         margin-left: 0px;
       }
@@ -64,28 +66,26 @@
       }
 
       &_light {
-        background-color: $primaryWhite;
-        color: $primaryDarkGrey;
+        @include light;
       }
     }
   }
 
   &__year {
-    font-size: 12px;
+    @include h6;
     padding: 20px 0 12px 20px;
 
-    @include breakPointTab {
+    @include mediaTablet {
       font-size: 16px;
     }
 
-    @include breakPointPC {
+    @include mediaDesktop {
       padding: 60px 0 32px 80px;
     }
   }
 
   &__name {
-    font-size: 32px;
-    font-weight: 500;
+    @include h3;
     padding-left: 20px;
 
     &_light {
@@ -98,12 +98,12 @@
       border-left: 2px solid $accentGold;
     }
 
-    @include breakPointTab {
-      font-size: 48px;
+    @include mediaTablet {
+      @include h2;
     }
 
-    @include breakPointPC {
-      font-size: 60px;
+    @include mediaDesktop {
+      font-size: $h1Text;
       padding-left: 80px;
     }
   }
@@ -119,32 +119,31 @@
     padding: 0 20px;
 
     &_dark {
-      background-color: $primaryBlack;
-      color: $primaryLightGrey;
+      @include dark;
     }
 
     &_light {
-      background-color: $primaryWhite;
-      color: $primaryDarkGrey;
+      @include light;
     }
 
     &_line {
       display: none;
       color: inherit;
 
-      @include breakPointPC {
+      @include mediaDesktop {
         display: block;
         padding-top: 12px;
       }
     }
 
-    @include breakPointPC {
+    @include mediaDesktop {
       position: relative;
       width: 604px;
       padding: 0 80px;
       padding-bottom: 60px;
     }
   }
+
   &__genres {
     margin-top: 20px;
   }
