--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -40,7 +40,7 @@
 
     &_link {
       display: inline-flex;
-      font-weight: $pMedium;
+      font-weight: $medium;
     }
   }
 
@@ -54,13 +54,11 @@
     justify-content: space-between;
     flex-direction: column;
     gap: 20px;
-    padding-top: 32px;
-    padding-bottom: 32px;
+    padding: 32px 0;
 
     @include mediaTablet {
       flex-direction: row;
-      padding-top: 40px;
-      padding-bottom: 40px;
+      padding: 40px 0;
     }
   }
 }
