--- a/src/pages/ArtistPage/ArtistPage.module.scss
+++ b/src/pages/ArtistPage/ArtistPage.module.scss
@@ -14,24 +14,22 @@
   &__container {
     padding-bottom: 80px;
 
-    @include breakPointTab {
+    @include mediaTablet {
       padding-bottom: 100px;
     }
   }
 
   &__heading {
     margin: 0;
-    font-size: 32px;
-    font-weight: 600;
+    @include h3;
     padding: 60px 0;
 
-    @include breakPointTab {
-      font-size: 60px;
-      font-weight: 500;
+    @include mediaTablet {
+      @include h1;
       padding: 98px 0 60px 0;
     }
 
-    @include breakPointPC {
+    @include mediaDesktop {
       padding-top: 160px;
       padding-left: 60px;
     }
@@ -65,7 +63,7 @@
   }
 
   &__content::after {
-    @include breakPointTab {
+    @include mediaTablet {
       content: 'BACK';
     }
   }
