Link variables fix

--- a/src/ui-components/Link/Link.module.scss
+++ b/src/ui-components/Link/Link.module.scss
@@ -1,6 +1,6 @@
 .link {
   font-family: $secondFontFamily;
-  font-weight: 500;
+  font-weight: $medium;
   font-size: inherit;
   letter-spacing: 0.5px;
   text-underline-offset: 4px;
