--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -7,11 +7,11 @@
   border-top: 1px solid $secondaryGrey;
 
   &_light {
-    @include light;
+    @include lightTheme;
   }
 
   &_dark {
-    @include dark;
+    @include darkTheme;
   }
 
   &__text {
