fix mixin butonText

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -146,8 +146,8 @@
 }
 
 @mixin buttonText {
-  font-size: $buttonBold;
-  font-weight: $buttonText;
+  font-size: $buttonText;
+  font-weight: $buttonBold;
 }
 
 @mixin capText {
