--- a/src/components/ScrollButton/ScrollButton.module.scss
+++ b/src/components/ScrollButton/ScrollButton.module.scss
@@ -1,6 +1,11 @@
 .scroll {
+  position: fixed;
+  cursor: pointer;
+  bottom: 20px;
+  right: 20px;
   padding: 0;
   box-sizing: border-box;
+  @include noUserSelect;
   @include flexCenter;
   border-radius: 50%;
   padding: 18px;
