--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -54,11 +54,11 @@
     justify-content: space-between;
     flex-direction: column;
     gap: 20px;
-    padding: 32px 0;
+    padding: 32px 20px;
 
     @include mediaTablet {
       flex-direction: row;
-      padding: 40px 0;
+      padding: 40px 20px;
     }
   }
 }
