fix Button style

--- a/src/ui-components/Button/Button.module.scss
+++ b/src/ui-components/Button/Button.module.scss
@@ -1,4 +1,6 @@
 .button {
+  cursor: pointer;
+  letter-spacing: 0.1px;
   font-family: $secondFontFamily;
   @include buttonText;
   text-transform: uppercase;
