--- a/src/components/SliderSlick/SliderSlick.module.scss
+++ b/src/components/SliderSlick/SliderSlick.module.scss
@@ -24,57 +24,71 @@
     display: flex;
     justify-content: flex-end;
     position: absolute;
-    @include h3;
-    right: 40px;
-    bottom: 19px;
+    @include h5;
+    right: 20px;
+    bottom: 20px;
     text-transform: uppercase;
     color: $primaryLightGrey;
-    @media screen and (max-width: 768px) {
-      padding-bottom: 1%;
-      @include h5;
+
+    @include mediaTablet {
+      @include h3;
+      right: 40px;
+      bottom: 60px;
+    }
+
+    @include mediaDesktop {
+      bottom: 19px;
+    }
+
+    @include mediaMax {
+      right: 120px;
+      bottom: 100px;
     }
   }
 
-  // &__slides {
-  //   display: flex;
-  //   align-items: center;
-  //   min-height: 100vh;
-
-  //   scroll-snap-type: x mandatory;
-  //   overflow-x: scroll;
-  //   overflow-y: hidden;
-  //   scroll-behavior: smooth;
-  //   -webkit-overflow-scrolling: touch;
-  // }
-
-  // &__slide {
-  //   position: relative;
-  //   min-height: 100vh;
-  //   min-width: 100%;
-  //   display: flex;
-  //   align-items: flex-end;
-  //   scroll-snap-align: center;
-  //   scroll-snap-stop: always;
-  // }
   &__navigation {
+    z-index: 3;
     position: absolute;
-    top: 50%;
-    bottom: 50%;
+    top: calc(50% - 20px);
     width: 100%;
     height: 40px;
-    display: flex;
     justify-content: space-between;
+    display: none;
+    color: $secondaryGrey;
+
+    @include mediaTablet {
+      display: flex;
+    }
   }
+
   &__next {
     border: none;
-    display: block;
     background-color: transparent;
+    display: block;
+    color: inherit;
+
+    cursor: pointer;
+    padding: 0;
+
+    &:disabled {
+      opacity: 0.1;
+      cursor: not-allowed;
+    }
   }
+
   &__prev {
     border: none;
     rotate: 180deg;
-    display: block;
     background-color: transparent;
+    display: block;
+    color: inherit;
+    cursor: pointer;
+    padding: 0;
+
+    &:disabled {
+      opacity: 0.1;
+      cursor: not-allowed;
+    }
   }
 }
 
@@ -86,30 +100,58 @@
     justify-content: center;
     position: absolute;
     z-index: 100;
-    top: 60px;
-    right: 40px;
+    top: 20px;
+    right: 20px;
     background-color: transparent;
     color: $primaryLightGrey;
+
+    @include mediaTablet {
+      top: 40px;
+      right: 40px;
+    }
+    @include mediaDesktop {
+      top: 60px;
+      right: 40px;
+    }
+    @include mediaMax {
+      top: 60px;
+      right: 120px;
+    }
   }
 
   &__cover {
     cursor: pointer;
     position: absolute;
-    top: 60px;
-    left: 40px;
+    top: 20px;
+    left: 20px;
     display: flex;
     align-items: center;
     color: $primaryLightGrey;
+
+    @include mediaTablet {
+      top: 40px;
+      left: 40px;
+    }
+
+    @include mediaDesktop {
+      top: 60px;
+      left: 40px;
+    }
+
+    @include mediaMax {
+      top: 60px;
+      left: 120px;
+    }
   }
 }
 
 .infoBlock {
   box-sizing: border-box;
-  width: 498px;
-  height: 122px;
+  width: 253px;
+  height: 68px;
   position: absolute;
-  bottom: 18px;
-  left: 40px;
+  bottom: 80px;
+  left: 0px;
   display: flex;
   justify-content: space-between;
 
@@ -121,13 +163,41 @@
     background-color: $primaryBlack;
   }
 
+  @include mediaTablet {
+    width: 498px;
+    height: 122px;
+    bottom: 60px;
+    left: 40px;
+  }
+
+  @include mediaDesktop {
+    bottom: 19px;
+  }
+
+  @include mediaMax {
+    bottom: 100px;
+    left: 120px;
+  }
+
   &__icons {
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
     display: flex;
     gap: 20px;
-    padding-top: 20px;
-    padding-right: 20px;
+    background-color: transparent;
 
     @include mediaTablet {
+      position: static;
+      padding-top: 20px;
+      padding-right: 20px;
+    }
+  }
+
+  &__button {
+    @include mediaTabletMaxWidth {
+      background-color: transparent;
+      color: $primaryLightGrey;
     }
   }
 
@@ -136,23 +206,28 @@
   }
 
   &__text {
-    padding-left: 20px;
+    padding-left: 12px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    gap: 4px;
+    margin-bottom: 9px;
 
-    &_light {
-      border-left: 2px solid $accentRed;
-    }
+    @include mediaTablet {
+      padding-left: 20px;
 
-    &_dark {
-      border-left: 2px solid $accentGold;
+      &_light {
+        border-left: 2px solid $accentRed;
+      }
+
+      &_dark {
+        border-left: 2px solid $accentGold;
+      }
     }
 
     &_title {
-      @include h4;
+      @include h6;
       text-transform: uppercase;
-      margin-top: 10px;
 
       &_light {
         color: $primaryBlack;
@@ -162,16 +237,14 @@
         color: $primaryWhite;
       }
 
-      @media screen and (max-width: 768px) {
-        @include h6;
-        margin-top: 5px;
+      @include mediaTablet {
+        @include h4;
       }
     }
 
     &_subtitle {
       font-family: $secondFontFamily;
-      font-size: 12px;
-      font-weight: 700;
+      @include capText;
 
       &_light {
         color: $accentRed;
@@ -180,28 +253,11 @@
       &_dark {
         color: $accentGold;
       }
+
+      @include mediaTablet {
+        font-size: 12px;
+        font-weight: 700;
+      }
     }
-  }
-}
-.swiper-slide {
-  max-width: 100vw;
-  max-height: 100vh;
-  font-size: 18px;
-  background: #fff;
-  position: relative;
-}
-
-.swiper {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 10000;
-
-  &-pagination {
-  }
-
-  .swiper-pagination {
   }
 }
