--- a/src/ui-components/Skeleton/Skeleton.module.scss
+++ b/src/ui-components/Skeleton/Skeleton.module.scss
@@ -1,4 +1,4 @@
-.card {
+.skeleton {
   display: block;
   box-sizing: border-box;
   position: relative;
@@ -20,30 +20,20 @@
     top: 0;
     height: 100%;
     width: 80px;
-    animation: loading 2s ease-out infinite;
+    animation: loading $skeletonAnimation;
   }
 
   &_light {
-    background-color: #eeeded;
+    background-color: $lightBackground;
     &::before {
-      background: linear-gradient(
-        to right,
-        transparent 0%,
-        $primaryWhite 50%,
-        transparent 100%
-      );
+      background: $lightGradient;
     }
   }
 
   &_dark {
-    background-color: #0d0d0d;
+    background-color: $darkBackground;
     &::before {
-      background: linear-gradient(
-        to right,
-        transparent 0%,
-        #181818 50%,
-        transparent 100%
-      );
+      background: $darkGradient;
     }
   }
 
@@ -52,15 +42,30 @@
     position: absolute;
     bottom: 0;
     width: calc(100% - 20px);
-    max-height: 45px;
+    height: 45px;
+    flex-direction: column;
+    justify-content: center;
+    gap: 4px;
+    padding-left: 12px;
 
     @include mediaTablet {
-      max-height: 66px;
+      height: 66px;
       width: calc(100% - 28px);
+      gap: 8px;
     }
+
     @include mediaDesktop {
-      max-height: 82px;
+      height: 82px;
       width: calc(100% - 92px);
+      padding-left: 20px;
+    }
+
+    &_light {
+      background-color: $primaryWhite;
+    }
+
+    &_dark {
+      background-color: $primaryBlack;
     }
   }
 
@@ -69,80 +74,33 @@
     width: 100%;
     height: 100%;
   }
-}
 
-.info {
-  box-sizing: border-box;
-  width: 100%;
-  padding: 8px 0 8px 0px;
-  max-width: 236px;
-
-  @include mediaTablet {
-    padding: 12px 0 12px 0px;
-    max-width: 300px;
-  }
-  @include mediaDesktop {
-    padding: 20px 0 20px 0px;
-  }
-
-  &_light {
-    background-color: $primaryWhite;
-  }
-
-  &_dark {
-    background-color: $primaryBlack;
-  }
-
-  &__textBlock {
-    width: 100%;
-    height: 29px;
-    border: none;
-    padding-left: 12px;
-
-    @include mediaTablet {
-      height: 42px;
+  &__title,
+  &__subtitle {
+    &_light {
+      background-color: $lightBackground;
     }
 
-    @include mediaDesktop {
-      padding-left: 18px;
+    &_dark {
+      background-color: $darkBackground;
     }
   }
 
   &__title {
-    box-sizing: border-box;
-    max-width: 160px;
+    width: 160px;
     height: 15px;
-    background-color: #eeeded;
 
     @include mediaTablet {
-      max-width: 214px;
+      width: 214px;
       height: 19px;
-    }
-
-    &_light {
-      background-color: #eeeded;
-    }
-
-    &_dark {
-      background-color: #0d0d0d;
     }
   }
 
   &__subtitle {
-    margin-block-start: 4px;
     width: 47px;
     height: 10px;
 
-    &_light {
-      background-color: #eeeded;
-    }
-
-    &_dark {
-      background-color: #0d0d0d;
-    }
-
     @include mediaTablet {
-      margin-block-start: 8px;
       width: 70px;
       height: 15px;
     }
@@ -156,11 +114,4 @@
   to {
     left: 100%;
   }
-}
-
-.img {
-  width: 500px;
-  height: 400px;
-  overflow: hidden;
-  background-color: inherit;
 }
