--- a/src/ui-components/Card/Card.module.scss
+++ b/src/ui-components/Card/Card.module.scss
@@ -78,11 +78,11 @@
       padding-left: 18px;
 
       &_light {
-        border-left: 2px solid $accentRed;
+        border-left: $borderLight;
       }
 
       &_dark {
-        border-left: 2px solid $accentGold;
+        border-left: $borderDark;
       }
     }
   }
