update Slider styles

--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -4,20 +4,11 @@
   top: 0;
   z-index: 100;
   width: 100vw;
-  height: 100vh;
   overflow: hidden;
   background-color: black;
 
   &__visible {
     display: block;
-  }
-
-  &__content {
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    top: 0;
-    left: 0;
   }
 
   &__pagination {
@@ -47,99 +38,81 @@
   }
 
   &__navigation {
+    display: none;
     z-index: 3;
     position: absolute;
     top: calc(50% - 20px);
     width: 100%;
     height: 40px;
     justify-content: space-between;
-    display: none;
     color: $secondaryGrey;
 
     @include mediaTablet {
       display: flex;
     }
-  }
 
-  &__next {
-    border: none;
-    background-color: transparent;
-    display: block;
-    color: inherit;
+    &_next,
+    &_prev {
+      border: none;
+      background-color: transparent;
+      display: block;
+      color: inherit;
 
-    cursor: pointer;
-    padding: 0;
+      cursor: pointer;
+      padding: 0;
 
-    &:disabled {
-      opacity: 0.1;
-      cursor: not-allowed;
+      &:disabled {
+        opacity: 0.3;
+        cursor: not-allowed;
+      }
+    }
+
+    &_prev {
+      rotate: 180deg;
     }
   }
 
-  &__prev {
-    border: none;
-    rotate: 180deg;
-    background-color: transparent;
-    display: block;
-    color: inherit;
-    cursor: pointer;
-    padding: 0;
-
-    &:disabled {
-      opacity: 0.1;
-      cursor: not-allowed;
-    }
-  }
-}
-
-.action {
-  &__close {
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    z-index: 100;
-    top: 20px;
-    right: 20px;
-    background-color: transparent;
-    color: $primaryLightGrey;
-
-    @include mediaTablet {
-      top: 40px;
-      right: 40px;
-    }
-    @include mediaDesktop {
-      top: 60px;
-      right: 40px;
-    }
-    @include mediaMax {
-      top: 60px;
-      right: 120px;
-    }
-  }
-
+  &__close,
   &__cover {
     cursor: pointer;
     position: absolute;
-    top: 20px;
-    left: 20px;
-    display: flex;
-    align-items: center;
+    background-color: transparent;
     color: $primaryLightGrey;
+    top: 20px;
+  }
 
-    @include mediaTablet {
+  &__close {
+    right: 20px;
+  }
+  &__cover {
+    left: 20px;
+  }
+
+  @include mediaTablet {
+    &__close,
+    &__cover {
       top: 40px;
+    }
+    &__close {
+      right: 40px;
+    }
+    &__cover {
       left: 40px;
     }
+  }
 
-    @include mediaDesktop {
+  @include mediaDesktop {
+    &__close,
+    &__cover {
       top: 60px;
-      left: 40px;
     }
+  }
 
-    @include mediaMax {
-      top: 60px;
+  @include mediaMax {
+    &__close {
+      right: 120px;
+    }
+    &__cover {
       left: 120px;
     }
   }
@@ -211,17 +184,16 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 4px;
-    margin-bottom: 9px;
 
     @include mediaTablet {
       padding-left: 20px;
 
       &_light {
-        border-left: 2px solid $accentRed;
+        border-left: $borderLight;
       }
 
       &_dark {
-        border-left: 2px solid $accentGold;
+        border-left: $borderDark;
       }
     }
 
@@ -255,8 +227,7 @@
       }
 
       @include mediaTablet {
-        font-size: 12px;
-        font-weight: 700;
+        @include subtitle;
       }
     }
   }
