update variables scss

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -118,6 +118,9 @@ $firstLayer: 1;
 $secondLayer: 2;
 $thirdLayer: 3;
 
+$tenLayer: 10;
+$elevenLayer: 11;
+
 // Transition time
 $headerMenuDelay: 0.5s;
 
