--- a/src/components/AuthModal/AuthModal.module.scss
+++ b/src/components/AuthModal/AuthModal.module.scss
@@ -4,23 +4,19 @@
   width: 100%;
   height: 100%;
   // margin: 0 auto;
-  background-color: aqua;
   display: flex;
 
   @include mediaDesktop {
-    width: 1024px;
+    width: 1028px;
     height: 700px;
   }
+
   &_light {
     background-color: $secondaryWhite;
   }
+
   &_dark {
     background-color: $primaryBlack;
-  }
-
-  &__login {
-  }
-  &__signup {
   }
 
   &__img {
@@ -31,6 +27,7 @@
       &_login {
         background-image: url('./../../assets/png/loginPaint.png');
       }
+
       &_signup {
         background-image: url('./../../assets/png/signupPaint.png');
       }
@@ -42,29 +39,50 @@
     margin: 0 auto;
     @include flexCenter;
     flex-direction: column;
-    gap: 60px;
+    gap: 40px;
+    @include noUserSelect;
 
     @include mediaDesktopMaxWidth {
       width: 100vw;
       height: 100vh;
     }
 
-    @include mediaTablet {
-      gap: 40px;
-    }
-
     @include mediaDesktop {
       max-width: 530px;
       gap: 20px;
+    }
+
+    &_dark {
+      color: $primaryWhite;
+    }
+
+    &_light {
+      color: $primaryBlack;
+      @include mediaDesktop {
+        color: $primaryDarkGrey;
+      }
     }
   }
 
   &__link {
     display: inline-flex;
+    @include linkAuth;
+
+    @include mediaTablet {
+      @include linkAuthBig;
+    }
   }
 
   &__header {
     @include h3;
+
+    &_light {
+      color: $primaryBlack;
+    }
+
+    &_dark {
+      color: $primaryWhite;
+    }
 
     @include mediaTablet {
       @include h1;
@@ -72,12 +90,48 @@
 
     @include mediaDesktop {
       @include h2;
+      &_light {
+        @include lightText;
+      }
     }
   }
 
   &__form {
+    max-width: 340px;
+
     @include mediaTablet {
       order: 1;
+      margin-top: 20px;
+    }
+    @include mediaDesktop {
+      margin-top: 40px;
+    }
+  }
+
+  &__paragraph {
+    font-family: $secondFontFamily;
+    line-height: 17px;
+    font-size: 12px;
+    font-weight: 300;
+    margin-top: 20px;
+
+    @include mediaTablet {
+      font-size: 16px;
+      font-weight: 300;
+      line-height: 22px;
+      margin-top: 0px;
+    }
+
+    // Пересмотреть в других классах
+    &_light {
+      @include lightText;
+    }
+
+    &_dark {
+      @include darkText;
+      @include mediaTablet {
+        color: $primaryWhite;
+      }
     }
   }
 }
