--- a/src/components/ArtistInfo/ArtistInfo.module.scss
+++ b/src/components/ArtistInfo/ArtistInfo.module.scss
@@ -2,6 +2,7 @@
   &__wrapper {
     display: block;
     position: static;
+    @include noUserSelect;
 
     @include mediaDesktop {
       position: relative;
@@ -19,6 +20,7 @@
 
   &__avatar {
     position: relative;
+    @include noUserSelect;
 
     &_image {
       max-height: 452px;
