--- a/src/ui-components/Genre/Genre.module.scss
+++ b/src/ui-components/Genre/Genre.module.scss
@@ -4,10 +4,13 @@
   line-height: 10px;
   box-sizing: border-box;
   padding: 8px 16px;
-  display: inline-block;
+  display: inline-flex;
+  justify-content: space-between;
+  align-items: center;
   border-radius: 30px;
   margin-right: 8px;
   margin-top: 12px;
+  gap: 8px;
 
   &_light {
     color: $primaryDarkGrey;
@@ -24,6 +27,10 @@
   @include mediaTablet {
     font-size: $capMidText;
     margin-right: 20px;
-    line-height: 17px;
+    line-height: 16px;
+  }
+
+  &__close {
+    display: flex;
   }
 }
