--- a/src/components/EditArtistPopUp/EditArtistPopUp.module.scss
+++ b/src/components/EditArtistPopUp/EditArtistPopUp.module.scss
@@ -1,13 +1,24 @@
 .popup {
-  @include flexCenter;
-  flex-direction: column;
-  min-width: 100%;
-  min-height: 100%;
+  width: 100%;
+  height: 100%;
+  position: relative;
 
-  &__modal {
+  &_light {
+    background-color: $secondaryWhite;
+  }
+
+  &_dark {
+    background-color: $primaryBlack;
+  }
+
+  @include mediaDesktop {
+    width: 800px;
+    height: 767px;
+  }
+
+  &__inner {
     @include flexCenter;
-    min-width: 100vw;
-    min-height: 100vh;
+    padding: 80px 0;
 
     &_light {
       background-color: $secondaryWhite;
@@ -18,14 +29,25 @@
     }
   }
 
-  @include mediaDesktop {
-    width: 800px;
-    height: 876px;
-  }
-}
+  &__icon {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background-color: transparent;
 
-.form {
-  @include flexCenter;
-  flex-direction: column;
-  gap: 40px;
+    @include mediaTablet {
+      top: 32px;
+    }
+
+    @include mediaDesktop {
+      right: 32px;
+    }
+
+    &_light {
+      color: $primaryDarkGrey;
+    }
+    &_dark {
+      color: $secondaryGrey;
+    }
+  }
 }
