--- a/src/ui-components/CheckBox/CheckBox.module.scss
+++ b/src/ui-components/CheckBox/CheckBox.module.scss
@@ -1,7 +1,7 @@
 .checkbox {
   height: 24px;
   width: 24px;
-  border-radius: 4px;
+  border-radius: $inputRadius;
   box-sizing: border-box;
   appearance: none;
 
