--- a/src/ui-components/Link/Link.module.scss
+++ b/src/ui-components/Link/Link.module.scss
@@ -3,7 +3,7 @@
   font-weight: $medium;
   font-size: inherit;
   letter-spacing: 0.5px;
-  text-underline-offset: 4px;
+  @include decorationUnderline;
   display: flex;
   align-items: center;
 
