--- a/src/components/ControlBar/ControlBar.module.scss
+++ b/src/components/ControlBar/ControlBar.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
-  max-width: 1280px;
+  max-width: $breakpointDesktop;
   padding: 0 20px;
   margin-top: 52px;
   margin-bottom: 24px;
