--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -186,7 +186,27 @@
 
 @mixin labelText {
   font-size: $labelText;
-  font-weight: $labelold;
+  font-weight: $labelbold;
+}
+
+@mixin labelBigMedium {
+  font-size: $labelBigText;
+  font-weight: $labelMedium;
+}
+
+@mixin textFullCenter {
+  text-align: $textCenter;
+  text-align-last: $textLastCenter;
+}
+
+@mixin textJustifyCenter {
+  text-align: $textJustify;
+  text-align-last: $textLastCenter;
+}
+
+@mixin decorationUnderline {
+  text-decoration: underline;
+  text-underline-offset: 4px;
 }
 
 // Colors mixnis
@@ -206,4 +226,50 @@
 
 @mixin darkText {
   color: $primaryLightGrey;
+}
+
+// Image
+@mixin imagePositionCover {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+// Scroll
+@mixin scrollStyle {
+  &::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    border: 1px solid transparent;
+    background-clip: content-box;
+  }
+
+  &::-webkit-scrollbar-track {
+    border-radius: 4px;
+    margin: 4px;
+  }
+
+  &::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
+}
+
+@mixin scrollStyleDark {
+  &::-webkit-scrollbar-thumb {
+    background-color: $primaryDarkGrey;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: $scrollDark;
+  }
+}
+
+@mixin scrollStyleLight {
+  &::-webkit-scrollbar-thumb {
+    background-color: $secondaryGrey;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: $scrollLight;
+  }
 }
