--- a/src/ui-components/MultiDropDown/MultiDropDown.module.scss
+++ b/src/ui-components/MultiDropDown/MultiDropDown.module.scss
@@ -47,18 +47,8 @@
     border: 1px solid $accentError;
   }
 
-  &__notification {
-  }
-
   @include mediaTablet {
     width: 340px;
-  }
-
-  &__wrapper {
-    &_light {
-    }
-    &_dark {
-    }
   }
 
   &__label {
@@ -103,50 +93,21 @@
     width: 260px;
     height: 170px;
     box-sizing: border-box;
-    border-radius: 4px;
+    border-radius: $inputRadius;
     padding: 16px 0 12px 0;
     margin-top: -4px;
     overflow-y: scroll;
-
-    &::-webkit-scrollbar-thumb {
-      border-radius: 4px;
-      border: 1px solid transparent;
-      background-clip: content-box;
-    }
-
-    &::-webkit-scrollbar-track {
-      border-radius: 4px;
-      margin: 4px;
-    }
-
-    &::-webkit-scrollbar {
-      width: 6px;
-      height: 6px;
-    }
-
     z-index: $secondLayer;
+    @include scrollStyle;
 
     &_light {
       background-color: $primaryWhite;
-
-      &::-webkit-scrollbar-thumb {
-        background-color: $secondaryGrey;
-      }
-
-      &::-webkit-scrollbar-track {
-        background-color: $scrollLight;
-      }
+      @include scrollStyleLight;
     }
+
     &_dark {
       background-color: $secondaryDark;
-
-      &::-webkit-scrollbar-thumb {
-        background-color: $primaryDarkGrey;
-      }
-
-      &::-webkit-scrollbar-track {
-        background-color: $scrollDark;
-      }
+      @include scrollStyleDark;
     }
 
     @include mediaTablet {
@@ -170,8 +131,7 @@
       color: $primaryDarkGrey;
 
       &:hover {
-        // в переменные
-        background-color: #1212120d;
+        background-color: $hoverLight;
       }
     }
 
@@ -179,8 +139,7 @@
       color: $primaryLightGrey;
 
       &:hover {
-        // в переменные
-        background-color: #cdcdcd0d;
+        background-color: $hoverDark;
       }
     }
   }
