--- a/src/components/EditArtistPopUp/EditArtistPopUp.module.scss
+++ b/src/components/EditArtistPopUp/EditArtistPopUp.module.scss
@@ -1,15 +1,5 @@
 .popup {
-  width: 100%;
-  height: 100%;
-  position: relative;
-
-  &_light {
-    background-color: $secondaryWhite;
-  }
-
-  &_dark {
-    background-color: $primaryBlack;
-  }
+  display: block;
 
   @include mediaDesktop {
     width: 800px;
@@ -26,28 +16,6 @@
 
     &_dark {
       background-color: $primaryBlack;
-    }
-  }
-
-  &__icon {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    background-color: transparent;
-
-    @include mediaTablet {
-      top: 32px;
-    }
-
-    @include mediaDesktop {
-      right: 32px;
-    }
-
-    &_light {
-      color: $primaryDarkGrey;
-    }
-    &_dark {
-      color: $secondaryGrey;
     }
   }
 }
