update ArtistPage - add Button - "ADD PICTURE"

--- a/src/pages/ArtistPage/ArtistPage.module.scss
+++ b/src/pages/ArtistPage/ArtistPage.module.scss
@@ -22,11 +22,11 @@
   &__heading {
     margin: 0;
     @include h3;
-    padding: 60px 0;
+    padding-top: 60px;
 
     @include mediaTablet {
       @include h1;
-      padding: 98px 0 60px 0;
+      padding-top: 98px;
     }
 
     @include mediaDesktop {
@@ -40,6 +40,23 @@
 
     &_dark {
       color: $accentGold;
+    }
+  }
+
+  &__addBlock {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+    margin-bottom: 20px;
+    padding-top: 20px;
+
+    @include mediaTablet {
+      padding-top: 16px;
+    }
+
+    &_button {
+      height: 24px;
     }
   }
 }
